# openenv

./: Dockerfile  README.md  __init__.py  baseline.py  client.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml
openenv_cli_auto_fixer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/: Dockerfile  __init__.py  app.py  requirements.txt
tasks/task_1/: main.py
tasks/task_2/: build.js  package.json
tasks/task_3/: main.py
